bevy_elf_macros/tests/ui/fail/invalid_def_type.rs
use bevy_elf_macros::FromDef;

#[derive(FromDef)]
#[elf(def_type(Bar))]
#[allow(unused)]
struct Foo;

fn main() {}
